Bugfix: MULTI-391 Alert button "OK" in dark mode

--- a/dev/user-frontend-ionic/src/theme/variables.scss
+++ b/dev/user-frontend-ionic/src/theme/variables.scss
@@ -465,4 +465,8 @@ body.dark {
   .button-solid {
     --background: rgb(255, 255, 255);
   }
+
+  .alert-button.sc-ion-alert-md:last-child {
+    color: white;
+  }
 }
